--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -35,5 +35,5 @@ setup(app=APP, options={'py2app': OPTIONS}, setup_requires=['py2app'])" > setup.
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
-          name: MonApp-macOS
+          name: Streamovie-macOs
           path: dist/*.app
