--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Create setup.py
         run: |
           echo "from setuptools import setup
-APP = ['Streamovie.py']
+APP = ['StreaMovie.py']
 OPTIONS = {'argv_emulation': True}
 setup(app=APP, options={'py2app': OPTIONS}, setup_requires=['py2app'])" > setup.py
 
